k8s/base/namespace.yaml
# Kubernetes Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: admin-system
  labels:
    app.kubernetes.io/name: admin-system
    app.kubernetes.io/description: "Admin Quarkus Application Namespace"
